[gd_scene load_steps=3 format=2]

[ext_resource path="res://Clock/Stopwatch/Stopwatch.gd" type="Script" id=1]
[ext_resource path="res://Clock/Stopwatch/Lap/Lap.tscn" type="PackedScene" id=2]

[node name="Stopwatch" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 1 )
reset_button = NodePath("VBoxContainer/HBoxContainer/Reset")
play_pause_button = NodePath("VBoxContainer/HBoxContainer/PlayPause")
lap_button = NodePath("VBoxContainer/HBoxContainer/Lap")
elapsed_time_label = NodePath("VBoxContainer/ElapsedTimeLabel")
lap_scene = ExtResource( 2 )
lap_container = NodePath("VBoxContainer/ScrollContainer/LapContainer")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
custom_constants/separation = 20

[node name="ElapsedTimeLabel" type="Label" parent="VBoxContainer"]
margin_right = 984.0
margin_bottom = 14.0
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_left = 492.0
margin_top = 34.0
margin_right = 492.0
margin_bottom = 520.0
size_flags_horizontal = 4
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="LapContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 540.0
margin_right = 984.0
margin_bottom = 560.0
custom_constants/separation = 20
alignment = 1

[node name="Reset" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 390.0
margin_right = 438.0
margin_bottom = 20.0
text = "Reset"

[node name="PlayPause" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 458.0
margin_right = 539.0
margin_bottom = 20.0
toggle_mode = true
text = "Play/Pause"

[node name="Lap" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 559.0
margin_right = 593.0
margin_bottom = 20.0
text = "Lap"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PlayPause" to="." method="_on_PlayPause_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Lap" to="." method="_on_Lap_pressed"]
